--- a/style.css
+++ b/style.css
@@ -1,38 +1,50 @@
-*
-{
+* {
     margin: 0;
     padding: 0;
-    font-family: 'poppins',sans-serif;
+    font-family: 'poppins', sans-serif;
     box-sizing: border-box;
 }
-.container{
+
+.container {
     width: 100vw;
-    height: 100vh;
+    height: 120vh;
     background-image: url(image/wallpaper2.jpg);
     background-position: center;
     background-size: cover;
     padding: 0 8%;
     position: relative;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
 }
-.logo{
-    width: 310px;
+
+.logo {
+    width: 290px;
     padding: 20px 0;
     cursor: pointer;
+    /*logo-template-columns: repeat(auto-fit, minmax(50px, 1fr));
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;*/
 }
-.content{
+
+.content {
     top: 50%;
     position: absolute;
     transform: translateY(-50%);
     color: rgb(241, 237, 246);
 }
-.content h1{
-    font-size: 65px;
+
+.content h1 {
+    font-size: auto;
     font-weight: 600;
 }
-.content h1 span{
+
+.content h1 span {
     color: #efd66a;
 }
-.content button{
+
+.content button {
     background: transparent;
     border: 2px solid rgb(124, 122, 124);
     outline: none;
@@ -43,53 +55,41 @@
     margin-top: 30px;
     cursor: pointer;
 }
-.content button img{
+
+.content button img {
     width: 35px;
     margin-left: 10px;
 }
-.launch-time{
+
+.launch-time {
     display: flex;
 }
-.launch-time div{
+
+.launch-time div {
     flex-basis: 100px;
 }
-.launch-time div p{
+
+.launch-time div p {
     font-size: 60px;
     margin-bottom: -14px;
 }
-.book{
-    width: 250px;
+
+.book {
+    width: 120px;
     position: absolute;
-    right: -90%;
+    left: 100%;
     bottom: 0;
     animation: book 4s linear infinite;
 }
-@keyframes book{
-    0%{
+
+@keyframes book {
+    0% {
         bottom: 0;
         opacity: 0;
     }
-    100%{
+
+    100% {
         bottom: 105%;
         opacity: 1;
     }
 }
-/* .back-video{
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    z-index: -1;
-}
-@media (min-aspect-ratio:16/9){
-    .back-video{
-        width: 100%;
-        height: auto;
-    }
-}
-@media (max-aspect-ratio:16/9){
-    .back-video{
-        width: auto;
-        height: 100%;
-    }
-}
-*/
