--- a/style.css
+++ b/style.css
@@ -7,25 +7,19 @@
 
 .container {
     width: 100vw;
-    height: 120vh;
+    height: 100vh;
     background-image: url(image/wallpaper2.jpg);
     background-position: center;
     background-size: cover;
     padding: 0 8%;
     position: relative;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
 }
 
 .logo {
-    width: 290px;
+    width: 310px;
     padding: 20px 0;
     cursor: pointer;
-    /*logo-template-columns: repeat(auto-fit, minmax(50px, 1fr));
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;*/
+    logo-template-columns: repeat(auto-fit, minmax(200px, 1fr));
 }
 
 .content {
@@ -36,7 +30,7 @@
 }
 
 .content h1 {
-    font-size: auto;
+    font-size: 65px;
     font-weight: 600;
 }
 
@@ -61,6 +55,12 @@
     margin-left: 10px;
 }
 
+p {
+
+    font-size: 15px;
+    padding: 5px;
+}
+
 .launch-time {
     display: flex;
 }
@@ -75,11 +75,11 @@
 }
 
 .book {
-    width: 120px;
+    width: 250px;
     position: absolute;
-    left: 80%;
+    right: -90%;
     bottom: 0;
-    animation: book 4s linear infinite;
+    animation: book 8s linear infinite;
 }
 
 @keyframes book {
@@ -91,5 +91,293 @@
     100% {
         bottom: 105%;
         opacity: 1;
+    }
+}
+
+/*Iphone5*/
+@media screen and (min-width:320px) {
+    .logo {
+        width: 180px;
+        padding: 20px 0;
+        cursor: pointer;
+        logo-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    }
+
+    .content h1 {
+        font-size: 30px;
+        font-weight: 600;
+    }
+
+    .content h1 span {
+        color: #efd66a;
+    }
+
+    .launch-time div {
+        flex-basis: 100px;
+        font-size: 13px;
+    }
+
+    .launch-time div p {
+        font-size: 35px;
+        margin-bottom: -10px;
+    }
+
+    p {
+
+        font-size: 10px;
+        padding: 5px;
+    }
+
+    .book {
+        width: 105px;
+        position: absolute;
+        right: -8%;
+        bottom: 0;
+        animation: book 8s linear infinite;
+    }
+
+    .content button {
+        background: transparent;
+        border: 2px solid rgb(124, 122, 124);
+        outline: none;
+        padding: 10px 11px;
+        color: aliceblue;
+        display: flex;
+        align-items: center;
+        margin-top: 17px;
+        cursor: pointer;
+    }
+
+    .content button img {
+        width: 15px;
+        margin-left: 7px;
+    }
+}
+
+/*IphoneXR,6 7 8 plus*/
+@media screen and (min-width:414px) {
+    .logo {
+        width: 250px;
+        padding: 20px 0;
+        cursor: pointer;
+        logo-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    }
+
+    .content h1 {
+        font-size: 45px;
+        font-weight: 600;
+    }
+
+    .content h1 span {
+        color: #efd66a;
+    }
+
+    .launch-time div {
+        flex-basis: 100px;
+    }
+
+    .launch-time div p {
+        font-size: 45px;
+        margin-bottom: -10px;
+    }
+
+    p {
+
+        font-size: 17px;
+        padding: 5px;
+    }
+
+    .book {
+        width: 150px;
+        position: absolute;
+        right: -8%;
+        bottom: 0;
+        animation: book 8s linear infinite;
+    }
+}
+
+/*IphoneSE,6,7,8*/
+@media screen and (min-width:375px) {
+    .logo {
+        width: 210px;
+        padding: 20px 0;
+        cursor: pointer;
+        logo-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    }
+
+    .content h1 {
+        font-size: 38px;
+        font-weight: 600;
+    }
+
+    .content h1 span {
+        color: #efd66a;
+    }
+
+    .launch-time div {
+        flex-basis: 80px;
+        font-size: 13px;
+    }
+
+    .launch-time div p {
+        font-size: 30px;
+        margin-bottom: -8px;
+    }
+
+    p {
+
+        font-size: 12px;
+        padding: 5px;
+    }
+
+    .book {
+        width: 120px;
+        position: absolute;
+        right: -10%;
+        bottom: 0;
+        animation: book 8s linear infinite;
+    }
+
+    .content button {
+        background: transparent;
+        border: 2px solid rgb(124, 122, 124);
+        outline: none;
+        padding: 10px 22px;
+        color: aliceblue;
+        display: flex;
+        align-items: center;
+        margin-top: 18px;
+        cursor: pointer;
+    }
+
+    .content button img {
+        width: 25px;
+        margin-left: 7px;
+    }
+}
+
+/*Ipad Air*/
+@media screen and (min-width:1180px) {
+    .logo {
+        width: 310px;
+        padding: 20px 0;
+        cursor: pointer;
+        logo-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    }
+
+    .content h1 {
+        font-size: 65px;
+        font-weight: 600;
+    }
+
+    .content h1 span {
+        color: #efd66a;
+    }
+
+    .launch-time div {
+        flex-basis: 100px;
+    }
+
+    .launch-time div p {
+        font-size: 60px;
+        margin-bottom: -14px;
+    }
+
+    p {
+
+        font-size: 15px;
+        padding: 5px;
+    }
+
+    .book {
+        width: 250px;
+        position: absolute;
+        right: -90%;
+        bottom: 0;
+        animation: book 8s linear infinite;
+    }
+}
+
+/*Ipad*/
+@media screen and (min-width:1024px) {
+    .logo {
+        width: 310px;
+        padding: 20px 0;
+        cursor: pointer;
+        logo-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    }
+
+    .content h1 {
+        font-size: 60px;
+        font-weight: 600;
+    }
+
+    .content h1 span {
+        color: #efd66a;
+    }
+
+    .launch-time div {
+        flex-basis: 100px;
+    }
+
+    .launch-time div p {
+        font-size: 62px;
+        margin-bottom: -10px;
+    }
+
+    p {
+
+        font-size: 15px;
+        padding: 5px;
+    }
+
+    .book {
+        width: 220px;
+        position: absolute;
+        right: -80%;
+        bottom: 0;
+        animation: book 8s linear infinite;
+    }
+}
+
+/*Ipad Pro*/
+@media screen and (min-width:1366px) {
+    .logo {
+        width: 370px;
+        padding: 20px 0;
+        cursor: pointer;
+        logo-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    }
+
+    .content h1 {
+        font-size: 70px;
+        font-weight: 600;
+    }
+
+    .content h1 span {
+        color: #efd66a;
+    }
+
+    .launch-time div {
+        flex-basis: 100px;
+    }
+
+    .launch-time div p {
+        font-size: 65px;
+        margin-bottom: -13px;
+    }
+
+    p {
+
+        font-size: 18px;
+        padding: 5px;
+    }
+
+    .book {
+        width: 280px;
+        position: absolute;
+        right: -95%;
+        bottom: 0;
+        animation: book 8s linear infinite;
     }
 }
