--- a/style.css
+++ b/style.css
@@ -16,8 +16,8 @@
 }
 
 .logo {
-    width: 310px;
-    padding: 20px 0;
+    width: 300px;
+    padding: 10px 0;
     cursor: pointer;
     logo-template-columns: repeat(auto-fit, minmax(200px, 1fr));
 }
@@ -377,6 +377,48 @@ p {
         width: 280px;
         position: absolute;
         right: -95%;
+        bottom: 0;
+        animation: book 10s linear infinite;
+    }
+}
+
+/*Desktop*/
+@media screen and (min-width:1025px) {
+    .logo {
+        width: 290px;
+        padding: 5px 0;
+        cursor: pointer;
+        logo-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    }
+
+    .content h1 {
+        font-size: 50px;
+        font-weight: 600;
+    }
+
+    .content h1 span {
+        color: #efd66a;
+    }
+
+    .launch-time div {
+        flex-basis: 100px;
+    }
+
+    .launch-time div p {
+        font-size: 65px;
+        margin-bottom: -13px;
+    }
+
+    p {
+
+        font-size: 14px;
+        padding: 3px;
+    }
+
+    .book {
+        width: 250px;
+        position: absolute;
+        right: -110%;
         bottom: 0;
         animation: book 10s linear infinite;
     }
