--- a/style.css
+++ b/style.css
@@ -256,6 +256,126 @@ p {
     }
 }
 
+/*Iphone11*/
+@media screen and (min-width:414px) {
+    .logo {
+        width: 260px;
+        padding: 20px 0;
+        cursor: pointer;
+        logo-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    }
+
+    .content h1 {
+        font-size: 45px;
+        font-weight: 600;
+    }
+
+    .content h1 span {
+        color: #efd66a;
+    }
+
+    .launch-time div {
+        flex-basis: 80px;
+        font-size: 16px;
+    }
+
+    .launch-time div p {
+        font-size: 30px;
+        margin-bottom: -8px;
+    }
+
+    p {
+
+        font-size: 15px;
+        padding: 5px;
+    }
+
+    .book {
+        width: 120px;
+        position: absolute;
+        right: -10%;
+        bottom: 0;
+        animation: book 10s linear infinite;
+    }
+
+    .content button {
+        background: transparent;
+        border: 2px solid rgb(124, 122, 124);
+        outline: none;
+        padding: 10px 22px;
+        color: aliceblue;
+        display: flex;
+        align-items: center;
+        margin-top: 18px;
+        cursor: pointer;
+    }
+
+    .content button img {
+        width: 25px;
+        margin-left: 7px;
+    }
+}
+
+/*Iphone12,13,14*/
+@media screen and (min-width:390px) {
+    .logo {
+        width: 280px;
+        padding: 20px 0;
+        cursor: pointer;
+        logo-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    }
+
+    .content h1 {
+        font-size: 42px;
+        font-weight: 600;
+    }
+
+    .content h1 span {
+        color: #efd66a;
+    }
+
+    .launch-time div {
+        flex-basis: 80px;
+        font-size: 16px;
+    }
+
+    .launch-time div p {
+        font-size: 30px;
+        margin-bottom: -8px;
+    }
+
+    p {
+
+        font-size: 15px;
+        padding: 5px;
+    }
+
+    .book {
+        width: 120px;
+        position: absolute;
+        right: -10%;
+        bottom: 0;
+        animation: book 10s linear infinite;
+    }
+
+    .content button {
+        background: transparent;
+        border: 2px solid rgb(124, 122, 124);
+        outline: none;
+        padding: 10px 22px;
+        color: aliceblue;
+        display: flex;
+        align-items: center;
+        margin-top: 18px;
+        cursor: pointer;
+    }
+
+    .content button img {
+        width: 25px;
+        margin-left: 7px;
+    }
+}
+
 /*Ipad Air*/
 @media screen and (min-width:1180px) {
     .logo {
