--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
     width: 100vw;
     height: 100vh;
     background-image: url(image/wallpaper2.jpg);
+    /*background-image: linear-gradient(to right, red,orange,yellow,green,blue,indigo,violet);*/
     background-position: center;
     background-size: cover;
     padding: 0 8%;
@@ -56,8 +57,8 @@
 }
 
 p {
-
     font-size: 15px;
+    color: rgb(214, 214, 214);
     padding: 5px;
 }
 
