--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: 'prompt','poppins', sans-serif;
+    font-family: 'prompt', 'poppins', sans-serif;
     box-sizing: border-box;
 }
 
@@ -33,7 +33,7 @@
 
 }
 
-.page2 .title{
+.page2 .title {
     width: 100%;
     z-index: 20;
     color: rgb(7, 6, 6);
@@ -116,6 +116,18 @@ p {
     bottom: 0;
     animation: book 10s linear infinite;
 }
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 50px;
+    width: 55%;
+    -moz-box-shadow: 10px 10px 50px #ccc;
+    -webkit-box-shadow: 10px 10px 50px #ccc;
+    box-shadow: 10px 10px 50px #ccc;
+}
+
 
 @keyframes book {
     0% {
