--- a/style.css
+++ b/style.css
@@ -117,13 +117,11 @@ p {
     animation: book 10s linear infinite;
 }
 
-.center {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 50px;
-    width: 35%;
-    -moz-box-shadow: 10px 10px 50px #ccc;
+.centerImage
+{
+ text-align:center;
+ display:block;
+ -moz-box-shadow: 10px 10px 50px #ccc;
     -webkit-box-shadow: 10px 10px 50px #ccc;
     box-shadow: 10px 10px 50px #ccc;
 }
